Bug 157266 - Crash when trying to use new Filter feature on Tools → Options
Summary: Crash when trying to use new Filter feature on Tools → Options
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2023-09-15 20:13 UTC by RGB
Modified: 2023-09-25 09:06 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace log file (106.20 KB, text/x-log)
2023-09-16 18:51 UTC, RGB
Details
bt with debug symbols (8.63 KB, text/plain)
2023-09-16 19:07 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2023-09-15 20:13:25 UTC
On a recent alpha for 24.2 (see bellow), if I go to Tools → Options and type anything on the new Filter box, LibreOffice immediately crash. Tested with both, kf5 and gtk3 VCL plugins. 


Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b3fdd999f87312447d03915585812b3a5cd48141
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 m.a.riosv 2023-09-16 09:38:15 UTC
Works for me in Win11 with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b3fdd999f87312447d03915585812b3a5cd48141
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded Jumbo
with or without Skia
Comment 2 Julien Nabet 2023-09-16 17:22:33 UTC
On pc Debian x86-64 with master sources updated today + gtk3 or kf5s rendering, I don't reproduce this.

Your bug is similar to tdf#157160 but this one has been already fixed and the fix is in the build you used.
Comment 3 RGB 2023-09-16 18:30:33 UTC
I downloaded again today from here: 
 
https://dev-builds.libreoffice.org/daily/master/current.html

got this

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 36163d269bd8f77a86605e4c5ff5adce17b4c66c
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

and still get the crash when I write something on the search field. If I'm fast I can write two or three characters, but then it crash.
Comment 4 Julien Nabet 2023-09-16 18:33:42 UTC
Would it be possible you attach a backtrace? (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU/Linux:_How_to_get_a_backtrace)
It may provide some hint about root cause.
Comment 5 RGB 2023-09-16 18:51:40 UTC
Created attachment 189630 [details]
backtrace log file

Ok, this is weird. If I start LibreOffice *without* documents (by starting soffice binary) and go to Tools → Options directly from the start screen, then the search field works, but if I open Writer and *then* go to Tools → Options and use the search field, it crash. It doesn't matter if I open soffice and then select a new Writer file before going to ... options or if I directly start swriter, it crash. If I try to run the soffice binary with the backtrace option, the program crash before opening, so I was not able to arrive to destination. I'm attaching the backtrace file I got anyway.
Comment 6 Julien Nabet 2023-09-16 19:07:21 UTC
Created attachment 189631 [details]
bt with debug symbols

Ok I could reproduce this when opening Writer then Tools/Options and just type "a" in search box.
Comment 7 Julien Nabet 2023-09-16 19:16:40 UTC
Patch waiting for Jenkins check here:
https://gerrit.libreoffice.org/c/core/+/156977
Comment 8 m.a.riosv 2023-09-16 19:36:53 UTC
Reproducible only with a writer document open, not with other apps.
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 36163d269bd8f77a86605e4c5ff5adce17b4c66c
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 9 Commit Notification 2023-09-16 20:06:49 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a4522ef5ce6a625054d83ec907aee07c156e94ed

tdf#157266: fix crash related to tdf#157006

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Heiko Tietze 2023-09-17 07:09:25 UTC
Would it be possible to have some UI test for this?
Comment 11 Bayram Çiçek 2023-09-18 19:11:02 UTC
(In reply to Heiko Tietze from comment #10)
> Would it be possible to have some UI test for this?

I'll work on that.
Comment 12 Commit Notification 2023-09-25 09:06:15 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0eb05b47a6d89fdfc533515483584fc739962b65

tdf#49895: search in Options: check if label exists (related to tdf#157266)

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.