tdf#157266: fix crash related to tdf#157006

Relevant part of bt:
0  0x00007f417347028d in SwCompatibilityOptPage::GetAllStrings() (this=0x558e50180c80) at /home/julien/lo/libreoffice/sw/source/ui/config/optcomp.cxx:344
1  0x00007f424dfc35e7 in OfaTreeOptionsDialog::initializeCurrentDialog(OptionsPageInfo*&, std::unique_ptr<weld::TreeIter, std::default_delete<weld::TreeIter> >&)
   (this=0x558e4d958ff0, pPageInfo=@0x7fff217470b8: 0x558e4d41f380, xEntry=std::unique_ptr<weld::TreeIter> = {...}) at /home/julien/lo/libreoffice/cui/source/options/treeopt.cxx:1253
2  0x00007f424dfc22a7 in OfaTreeOptionsDialog::initializeFirstNDialog(short) (this=0x558e4d958ff0, nNumberOfNode=-1) at /home/julien/lo/libreoffice/cui/source/options/treeopt.cxx:877
3  0x00007f424dfc1ca8 in OfaTreeOptionsDialog::ImplUpdateDataHdl(Timer*) (this=0x558e4d958ff0) at /home/julien/lo/libreoffice/cui/source/options/treeopt.cxx:805
4  0x00007f424dfbbc1d in OfaTreeOptionsDialog::LinkStubImplUpdateDataHdl(void*, Timer*) (instance=0x558e4d958ff0, data=0x558e4d959060) at /home/julien/lo/libreoffice/cui/source/options/treeopt.cxx:792

Full bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=189631

"label2" had been removed with https://git.libreoffice.org/core/+/1d4cd39262fb71f72311e33ac2bdb7d925be5d98%5E%21
"Related tdf#157006 - Remove global compatibility options

Clean-up the UI in favor of the advanced options
"

Change-Id: I8e3532fb79afedf05fe42d0745c823fa2f1c362c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156977
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins